# gha-cmake-HelloWorld

./: .actrc  CMakeLists.txt
.github/workflows/: build_cmake.yml  cmake_build_test-ubuntu-latest.yml  cmake_build_test-ubuntu-latest.yml.disabled  test-add-path.yml  test-env-files.yml
